Get the latest version of this file at http://episoder.sourceforge.net/
===============================================================================

v0.5.4 (xx xxx 2009)
====================
 * No longer report an error when no sources are defined, just log a warning

v0.5.3 (26 Jul 2009)
====================
 * Added support for another epguides formatting style (used eg. for "Eureka")
 * Added option to suppress colors in console output
 * Added a filter to remove invalid characters from epguides content
 * Fixed some other parsing issues in the epguides parser
 * Improved compatibility with older python versions

v0.5.2 (30 Jun 2009)
====================
 * Reworked parts of the code to improve compatibility with older libraries
 * Fixed some encoding issues in the console renderer

v0.5.1 (23 Jun 2009)
====================
 * Thanks to Philip Douglass for his bug reports and patches
 * The epguides parser now properly closes all file handles and works with mawk
 * The tv.com parser would crash on missing production/season/episode numbers
 * The tv.com parser now accepts urls that contain a dash
 * Switched to using sqlalchemy to access the database
 * Properly implemented the user-agent configuration option
 * Removed old FAQ
 * Fixed some text encoding issues
 * Small fixes to the man page

v0.5.0 (18 May 2009)
====================
 * Rewrote the whole thing in python
 * Wrote a brand new tv.com parser
 * Small fixes in the epguides.com parser
 * Parsed data is now stored in an sqlite3 database

v0.4.7 (24 Feb 2007)
====================
 * Fixed a parsing issue introduced with 0.4.6

v0.4.6 (24 Feb 2007)
====================
 * Discovered yet another formatting possibility on epguides.com (used for
   instance for the show "Midsomer Murders") and adapted the parser accordingly
 * Slightly updated the man page

v0.4.5 (23 Jan 2007)
====================
 * Fixed some epguides parser issues

v0.4.4 (19 Nov 2006)
====================