@@ -76,7 +76,7 @@ Options for console output:
   -n <days>		number of future days to show (default: 2),
 			relative to the date set with -d
   -C			don't show any colors
-  -s <text>		search database for text (NOT IMPLEMENTED YET)
+  -s <text>		search database for text
 
 Note that -i overrules -d and -n
 
@@ -235,9 +235,21 @@ def update_data(options, config):
 		parser = plugins.parser_named(options['parser'])
 		parser.parseFile(file, store)
 	else:
+		# first, add all shows from the config file to our database
 		for source in config['sources']:
 			url = source['url']
-			parser = plugins.parser_for(url)
+			show = store.getShowByUrl(url)
+
+			if not show:
+				show = episoder.Show(None, url=url)
+				show = store.addShow(show)
+				store.commit()
+
+		# then, update all shows that need updating
+		shows = store.getExpiredShows()
+
+		for show in shows:
+			parser = plugins.parser_for(show.url)
 
 			if not parser:
 				logging.warning('No parser found for %s' % url)
@@ -245,7 +257,8 @@ def update_data(options, config):
 
 			if 'agent' in config:
 				parser.user_agent = config['agent']
-			parser.parse(source, store)
+
+			parser.parse(show, store)
 
 	if not options['nodate']:
 		basedate = options['date']
